Fix radio button center align on Exam component

--- a/src/styles/exam.css
+++ b/src/styles/exam.css
@@ -64,8 +64,8 @@
     height: 12px;
     background: rgba(34, 52, 102, 0.82);
     position: absolute;
-    top: 4px;
-    left: 4px;
+    top: 3px;
+    left: 3px;
     border-radius: 100%;
     -webkit-transition: all 0.2s ease;
     transition: all 0.2s ease;
